Added swaggers and tests for comment, rating and some for one product page
