# apps/shop/views/products/comment.py
@@ -1,31 +1,25 @@
 from django.http import HttpResponseRedirect
+from core import IsActive
 
 from apps.shop.serializers import CommentSerializer
 
-from rest_framework.permissions import IsAuthenticated
 from rest_framework.views import APIView
-from rest_framework.authentication import SessionAuthentication, BasicAuthentication     
+from rest_framework.response import Response  
+  
 
-
-
-class CsrfExemptSessionAuthentication(SessionAuthentication):
-
-    def enforce_csrf(self, request):
-        return   # To not perform the csrf check previously happening
-    
-class Comment(APIView):
-    permission_classes = [IsAuthenticated]
-    authentication_classes = (CsrfExemptSessionAuthentication, BasicAuthentication)
+class CommentView(APIView):
+    permission_classes = (IsActive,)
     # Leave a comment
     def post(self,request, product_id):
         try:
-            data = {"author":request.user.id, "product":product_id,"comment":(request.POST.get('comment'))}
+            data = {"author":request.user.id, "product":product_id,"comment":(request.data['comment'])}
             serializer = CommentSerializer(data=data)
             serializer.is_valid(raise_exception=True)
        
         except: 
-            return HttpResponseRedirect ("/404_error/")
+            return HttpResponseRedirect ("/api/v1/404_error/")
         
         else:
             serializer.save()
-            return HttpResponseRedirect ("")
+            # return HttpResponseRedirect ("")
+            return Response ({"information":serializer.data})
